<resources>
    <string name="app_name">Color Finder 2</string>
    <string name="app_header">Color Finder 2</string>
    <string name="bar_red">Red</string>
    <string name="bar_green">Green</string>
    <string name="bar_blue">Blue</string>
    <string name="action_settings">Settings</string>
    <string name="base">0</string>
    <string name="save">Save</string>
    <string name="load">Load</string>
    <string name="s1">Save 1</string>
    <string name="s2">Save 2</string>
    <string name="s3">Save 3</string>
    <string name="l1">Saved 1</string>
    <string name="l2">Saved 2</string>
    <string name="l3">Saved 3</string>
    <string name="clear">Delete</string>
    <string name="saved">Colors Saved</string>
    <string name="nameColor">Name Your Color</string>
    <string name="confirm">Save</string>
</resources>
