<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.example.assignment_two.MainActivity">
    <item android:id="@+id/save"
          android:title="@string/save"
          android:orderInCategory="100"
          app:showAsAction="collapseActionView">
        <menu>
            <item android:title="@string/s1" android:id="@+id/s1"/>
            <item android:title="@string/s2" android:id="@+id/s2"/>
            <item android:title="@string/s3" android:id="@+id/s3"/>
        </menu>
    </item>
    <item android:title="@string/load" android:id="@+id/load" app:showAsAction="collapseActionView">
        <menu
        >
            <item android:title="@string/l1" android:id="@+id/l1"/>
            <item android:title="@string/l2" android:id="@+id/l2"/>
            <item android:title="@string/l3" android:id="@+id/l3"/>
        </menu>
    </item>
</menu>
